# CuteNodes

./: .gitignore  CMakeLists.txt  LICENSE.md  test_scene_1.json
res/: resources.qrc
src/: CMakeLists.txt  Connector.cpp  Connector.h  CuteConnection.cpp  CuteConnection.h  CuteDock.cpp  CuteDock.h  CuteNode.cpp  CuteNode.h  CuteNodeWidget.cpp  CuteNodeWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NodeFactory.cpp  NodeFactory.h  NodeScene.cpp  NodeScene.h  NodeView.cpp  NodeView.h  cutenodewidget.cpp  cutenodewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nodescene.cpp  nodescene.h
templates/test1/: node_desc.json
templates/test2/: node_desc.json
templates/test3/: node_desc.json
templates/test4/: node_desc.json
templates/test5/: node_desc.json
